<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:orientation="vertical">
    <!-- display domain,subdomain -->
    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="41.4dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <com.supremainc.biostar2.view.StyledTextView
            android:id="@+id/subdomain"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/login_tab"
            android:ellipsize="end"
            android:gravity="left|center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/login"
            android:textSize="14dp"
            app:typeface="roboto_bold.ttf"/>

        <ImageView
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="3dp"
            android:gravity="bottom|center"
            android:src="@drawable/login_domain_dot"/>

        <com.supremainc.biostar2.view.StyledTextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:background="@drawable/login_nor"
            android:ellipsize="end"
            android:gravity="left|center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/gray_12"
            android:textSize="14dp"
            app:typeface="roboto_bold.ttf"/>
    </LinearLayout>

    <!-- input domain,subdomain -->
    <LinearLayout
        android:id="@+id/container_input"
        android:layout_width="262dp"
        android:layout_height="41.4dp"
        android:layout_gravity="center"
        android:layout_marginTop="2.6dp"
        android:background="@drawable/iogin_text_bubble_left"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.supremainc.biostar2.view.StyledEditTextView
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10.4dp"
            android:layout_marginRight="10.4dp"
            android:layout_weight="1"
            android:background="@drawable/selector_color_transparent"
            android:ellipsize="end"
            android:gravity="left|center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/login_id"
            android:textSize="14dp"
            app:typeface="roboto_bold.ttf"/>

        <FrameLayout
            android:id="@+id/default_url"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10.4dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:gravity="center|left"
                android:scaleType="fitXY"
                android:src="@drawable/selector_btn_login_more"/>
        </FrameLayout>
    </LinearLayout>

    <!-- input id -->
    <FrameLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14.8dp"
        android:layout_marginTop="14.8dp">

        <com.supremainc.biostar2.view.StyledEditTextView
            android:id="@+id/login_id"
            android:layout_width="262dp"
            android:layout_height="41.4dp"
            android:background="@drawable/login_nor"
            android:ellipsize="end"
            android:gravity="left|center"
            android:hint="@string/id"
            android:imeOptions="actionNext"
            android:paddingLeft="48.03dp"
            android:paddingRight="10.4dp"
            android:singleLine="true"
            android:textColor="@color/login_id"
            android:textSize="14dp"
            app:typeface="roboto_bold.ttf"/>

        <ImageView
            android:layout_width="16.23dp"
            android:layout_height="17.39dp"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10.4dp"
            android:layout_marginRight="10.4dp"
            android:gravity="left|center"
            android:scaleType="fitXY"
            android:src="@drawable/login_id"/>

        <FrameLayout
            android:layout_width="0.6dp"
            android:layout_height="41.4dp"
            android:layout_gravity="left|center"
            android:layout_marginLeft="37.03dp"
            android:background="@color/devider_login"
            android:gravity="left|center"
            android:orientation="horizontal"/>
    </FrameLayout>
    <!-- input password -->
    <FrameLayout
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14.8dp">

        <com.supremainc.biostar2.view.StyledEditTextView
            android:id="@+id/password"
            android:layout_width="262dp"
            android:layout_height="41.4dp"
            android:background="@drawable/login_nor"
            android:ellipsize="end"
            android:gravity="left|center"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="48.03dp"
            android:paddingRight="10.4dp"
            android:singleLine="true"
            android:textColor="@color/login_id"
            android:textSize="14dp"
            app:typeface="roboto_bold.ttf"/>

        <ImageView
            android:layout_width="16.23dp"
            android:layout_height="17.39dp"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10.4dp"
            android:layout_marginRight="10.4dp"
            android:gravity="left|center"
            android:scaleType="fitXY"
            android:src="@drawable/login_pw"/>

        <FrameLayout
            android:layout_width="0.6dp"
            android:layout_height="41.4dp"
            android:layout_gravity="left|center"
            android:layout_marginLeft="37.03dp"
            android:background="@color/devider_login"
            android:gravity="left|center"
            android:orientation="horizontal"/>
    </FrameLayout>
    <!-- login button -->
    <com.supremainc.biostar2.view.StyledTextView
        android:id="@+id/login"
        android:layout_width="262dp"
        android:layout_height="45.8dp"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="10.4dp"
        android:layout_marginRight="10.4dp"
        android:background="@drawable/selector_btn_login"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:typeface="roboto_bold.ttf"/>
</LinearLayout>
