...
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            androidfont:typeface="roboto_regular.ttf"/>

        <com.supremainc.biostar2.view.StyledTextView
            android:id="@+id/display_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="50dp"
...
