...

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:direction="both">

            <ListView
                android:id="@+id/listview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:cacheColorHint="#00000000"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
...
