<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_menu_first_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="top|center"
        android:orientation="horizontal"/>

    <LinearLayout
        android:id="@+id/main_menu_second_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="18dp"
        android:gravity="top|center"
        android:orientation="horizontal"/>
</LinearLayout>