<?xml version="1.0" encoding="utf-8"?><!-- <~SCREEN NAME)> {Door_List} </~SCREEN NAME> -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:androidfont="http://schemas.android.com/apk/res-auto"
              android:id="@+id/user_container"
              android:layout_width="match_parent"
              android:layout_height="68dp"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
...
